# AstroNav

./: CMakeLists.txt  CMakeLists.txt.user.32201f7  CMakeLists.txt.user.4db4f97  CMakeLists.txt.user.59cffc4  activitybox.cpp  activitybox.h  activitybox.ui  cameramanager.cpp  cameramanager.h  databasehandler.cpp  databasehandler.h  firstpersoncameracontroller.cpp  firstpersoncameracontroller.h  includepr.h  includeqt.h  infobox.cpp  infobox.h  infobox.ui  local_stars.db  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  music.cpp  music.h  qtmanager.cpp  qtmanager.h  registerdialog.cpp  registerdialog.h  registerdialog.ui  resources.qrc  starcreator.cpp  starcreator.h  thirdpersoncameracontroller.cpp  thirdpersoncameracontroller.h
